--- a/app/views/icm/incident_statuses/_new_form.html.erb
+++ b/app/views/icm/incident_statuses/_new_form.html.erb
@@ -1,105 +1,98 @@
 <%= common_title(:show_data=>@incident_status[:name]) %>
 
-<%= form_for(@incident_status, :url=>{:action=>"create"}, :builder => LabellingFormBuilder) do |f| %>
-    <div id="ep" class="edit-block page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-          <tr>
-            <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_icm_incident_status_new) %></h2></td>
-            <td id="topButtonRow" class="pbButton">
-              <div class="button"><%= f.submit t(:save) %></div>
-              <div class="button"><%= link_to t(:cancel), {:action => "index"} %></div>
-            </td>
-          </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <%= error_for @incident_status %>
-        <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-          <span class="requiredLegend">
-            <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-            </span>
-          <span class="requiredMark">*</span>
-          <span class="requiredText"> = <%= t(:label_is_required) %></span>
-          </span>
-      </span>
+<%= form_for(@incident_status, :url=>{:action=>"create"}, :builder => CustomFormBuilder) do |f| %>
+  <% content_for :form_block_common   do%>
+    <table class="form-table" xmlns="http://www.w3.org/1999/html">
+      <tbody>
+      <tr>
+        <td class="label-col"><label><%= (t :label_icm_incident_status_phase_code) %></label></td>
+        <td class="data-col"><%= f.select :phase_code, nullable_options_for_select(available_incident_phase, @incident_status.phase_code),{}, {:require=>true} %></td>
+        <td class="label-col empty">&nbsp;</td>
+        <td class="data-col empty">&nbsp;</td>
+      </tr>
+      <tr>
+        <td class="label-col"><label><%= (t :label_icm_incident_status_incident_status_code) %></label></td>
+        <td class="data-col"><%= f.text_field :incident_status_code, :required=>true, :irm_uppercase=>true %></td>
+        <td class="label-col empty">&nbsp;</td>
+        <td class="data-col empty">&nbsp;</td>
+      </tr>
+      <tr>
+        <td class="label-col"><label><%= (t :label_icm_incident_status_name) %></label></td>
+        <td class="data-col"><%= f.text_field :name, :required=>true %></td>
+        <td class="label-col empty">&nbsp;</td>
+        <td class="data-col empty">&nbsp;</td>
+      </tr>
+      <tr>
+        <td class="label-col"><%= t(:display_sequence) %></td>
+        <td class="data-col"><%= f.text_field :display_sequence, :required=>true %></td>
+        <td class="label-col empty">&nbsp;</td>
+        <td class="data-col empty">&nbsp;</td>
+      </tr>
+      <tr>
+        <td class="label-col"><label><%= (t :default_flag) %></label></td>
+        <td class="data-col"><%= f.check_box :default_flag %></td>
+        <td class="label-col empty">&nbsp;</td>
+        <td class="data-col empty">&nbsp;</td>
+      </tr>
+      <tr>
+        <td class="label-col"><label><%= (t :label_icm_incident_close_flag) %></label></td>
+        <td class="data-col"><%= f.check_box :close_flag %></td>
+        <td class="label-col empty">&nbsp;</td>
+        <td class="data-col empty">&nbsp;</td>
+      </tr>
+      <tr>
+        <td class="label-col"><label><%= (t :label_icm_incident_permanent_close_flag) %></label></td>
+        <td class="data-col"><%= f.check_box :permanent_close_flag %></td>
+        <td class="label-col empty">&nbsp;</td>
+        <td class="data-col empty">&nbsp;</td>
+      </tr>
+      <tr>
+        <td class="label-col"><label><%= (t :label_icm_incident_status_description) %></label></td>
+        <td class="data-col"><%= f.text_area :description, :rows=>4,:class=>"input-xlarge" %></td>
+        <td class="label-col empty">&nbsp;</td>
+        <td class="data-col empty">&nbsp;</td>
+      </tr>
+      </tbody>
+    </table>
+  <% end %>
 
-          <h3><%= t(:label_icm_incident_status_info) %></h3>
-        </div>
-        <div class="pbSubsection">
-          <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-            <tbody>
-            <tr>
-              <td class="labelCol"><label><%= (t :label_icm_incident_status_phase_code) %></label></td>
-              <td class="dataCol"><%= f.select :phase_code, nullable_options_for_select(available_incident_phase, @incident_status.phase_code),
-                                               {}, {:require=>true} %></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%= (t :label_icm_incident_status_incident_status_code) %></label></td>
-              <td class="dataCol"><%= f.text_field :incident_status_code, :required=>true, :irm_uppercase=>true %></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%= (t :label_icm_incident_status_name) %></label></td>
-              <td class="dataCol"><%= f.text_field :name, :required=>true %></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><%= t(:display_sequence) %></td>
-              <td class="dataCol"><%= f.text_field :display_sequence, :required=>true %></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%= (t :default_flag) %></label></td>
-              <td class="dataCol"><%= f.check_box :default_flag %></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%= (t :label_icm_incident_close_flag) %></label></td>
-              <td class="dataCol"><%= f.check_box :close_flag %></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%= (t :label_icm_incident_permanent_close_flag) %></label></td>
-              <td class="dataCol"><%= f.check_box :permanent_close_flag %></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%= (t :label_icm_incident_status_description) %></label></td>
-              <td class="dataCol"><%= f.text_area :description, :rows=>4 %></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:cancel), {:action => "index"}, {:class => "btn cancel"}%>
+  <% end %>
 
-            </tbody>
-          </table>
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%= t(:label_icm_incident_status_new) %></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%= t(:label_icm_incident_status_info) %></h3>
         </div>
-      </div>
-      <div class="pbBottomButtons">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-          <tr>
-            <td class="pbTitle"></td>
-            <td id="bottomButtonRow" class="pbButtonb">
-              <div class="button"><%= f.submit t(:save) %></div>
-              <div class="button"><%= link_to t(:cancel), {:action => "index"} %></div>
-            </td>
-          </tr>
-          </tbody>
-        </table>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
       </div>
     </div>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+  </div>
 <% end %>
 
