--- a/app/views/icm/incident_statuses/edit_transform.html.erb
+++ b/app/views/icm/incident_statuses/edit_transform.html.erb
@@ -18,67 +18,71 @@
   }
 </style>
 <%= common_title(:action_meaning=>t(:label_icm_incident_status_edit_transform)) %>
+<%= form_tag({:action=>"update_transform"},:builder => CustomFormBuilder) do |f| %>
 
-<%= form_tag({:action=>"update_transform"},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_icm_incident_status_edit_transform)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-          </td>
-        </tr>
-      </tbody>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:cancel), {:action => "index"}, {:class => "btn cancel"}%>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_icm_incident_status_edit_transform)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
     </table>
-  </div>
-  <div class="pbBody">
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <h3><%=t(:label_icm_incident_status_info)%></h3>
-    </div>
-    <div class="pbSubsection">
-      <table id="statusMatrix" cellpadding="0" cellspacing="0" border="0" error="<%=t(:label_irm_incident_status_transform_event_error) %>">
-        <% incident_statuses = available_incident_status;
-           incident_status_ids = incident_statuses.collect{|i| i.id};
-           events = available_incident_request_event;
-           status_transforms = available_status_transform;
-        %>
-        <tbody>
-          <tr>
-            <th class="from"></th>
-            <% incident_statuses.each do |to_status| %>
-              <th class="to"><%= to_status[:name]%></th>
-            <% end %>
-          </tr>
-          <% incident_statuses.each do |from_status| %>
-            <tr>
-              <th class="from"><%= from_status[:name]%></th>
-              <% incident_status_ids.each do |to_id| %>
-                <td>
-                  <%= blank_select_tag("status_transforms[#{from_status.id}][#{to_id}]",events,(status_transforms[from_status.id]&&status_transforms[from_status.id][to_id]) ? status_transforms[from_status.id][to_id] : nil,{:class=>"eventSelect",:ref=>from_status.id,:title=>from_status[:name]}) %>
-                </td>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%=t(:label_icm_incident_status_info)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <table id="statusMatrix" cellpadding="0" cellspacing="0" border="0" error="<%=t(:label_irm_incident_status_transform_event_error) %>">
+            <% incident_statuses = available_incident_status;
+               incident_status_ids = incident_statuses.collect{|i| i.id};
+               events = available_incident_request_event;
+               status_transforms = available_status_transform;
+            %>
+            <tbody>
+              <tr>
+                <th class="from"></th>
+                <% incident_statuses.each do |to_status| %>
+                  <th class="to"><%= to_status[:name]%></th>
+                <% end %>
+              </tr>
+              <% incident_statuses.each do |from_status| %>
+                <tr>
+                  <th class="from"><%= from_status[:name]%></th>
+                  <% incident_status_ids.each do |to_id| %>
+                    <td>
+                      <%= blank_select_tag("status_transforms[#{from_status.id}][#{to_id}]",events,(status_transforms[from_status.id]&&status_transforms[from_status.id][to_id]) ? status_transforms[from_status.id][to_id] : nil,{:class=>"eventSelect",:ref=>from_status.id,:title=>from_status[:name]}) %>
+                    </td>
+                  <% end %>
+                </tr>
               <% end %>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= submit_tag t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "index"}%></div>
-          </td>
-        </tr>
-      </tbody>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
     </table>
   </div>
-</div>
 <% end %>
+
 <script type="text/javascript">
   $(function(){
       function getRefValues(ref,value){
