--- a/app/views/icm/incident_statuses/index.html.erb
+++ b/app/views/icm/incident_statuses/index.html.erb
@@ -21,96 +21,67 @@
   }
 </style>
 <%= common_title %>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_icm_incident_status_edit_transform) %></h2></td>
-              <td  class="pbButton">
-                <div class="button"><%= link_to t(:edit), {:action => "edit_transform"}%></div>
+
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_icm_incident_status_edit_transform) %></h2>
+      </td>
+      <td class="page-block-button">
+        <%= link_to t(:edit), {:action => "edit_transform"}, :class => "btn btn-primary" %>
+      </td>
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <table id="statusMatrix" cellpadding="0" cellspacing="0" border="0">
+      <% incident_statuses = available_incident_status;
+         incident_status_ids = incident_statuses.collect{|i| i.id};
+         events = available_incident_event_name;
+         status_transforms = available_status_transform;
+      %>
+      <tbody>
+        <tr>
+          <th class="from"></th>
+          <% incident_statuses.each do |to_status| %>
+            <th class="to"><%= to_status[:name]%></th>
+          <% end %>
+        </tr>
+        <% incident_statuses.each do |from_status| %>
+          <tr>
+            <th class="from"><%= from_status[:name]%></th>
+            <% incident_status_ids.each do |to_id| %>
+              <td title="<%=from_status[:name]%>">
+                <%= events[(status_transforms[from_status.id]&&status_transforms[from_status.id][to_id]) ? status_transforms[from_status.id][to_id] : nil] %>
               </td>
-              <td class="pbHelp">
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <table id="statusMatrix" cellpadding="0" cellspacing="0" border="0">
-          <% incident_statuses = available_incident_status;
-             incident_status_ids = incident_statuses.collect{|i| i.id};
-             events = available_incident_event_name;
-             status_transforms = available_status_transform;
-          %>
-          <tbody>
-            <tr>
-              <th class="from"></th>
-              <% incident_statuses.each do |to_status| %>
-                <th class="to"><%= to_status[:name]%></th>
-              <% end %>
-            </tr>
-            <% incident_statuses.each do |from_status| %>
-              <tr>
-                <th class="from"><%= from_status[:name]%></th>
-                <% incident_status_ids.each do |to_id| %>
-                  <td title="<%=from_status[:name]%>">
-                    <%= events[(status_transforms[from_status.id]&&status_transforms[from_status.id][to_id]) ? status_transforms[from_status.id][to_id] : nil] %>
-                  </td>
-                <% end %>
-              </tr>
             <% end %>
-          </tbody>
-        </table>
-      </div>
-    </div>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_icm_incident_status_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="incidentStatusesSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="incident_status" class="datatable" style="width:100%;">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>&nbsp;
-            <%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
-          </div>
-          <div id="default_flag" style="display:none">
-            <%= check_img("{default_flag}") %>
-          </div>
-          <div id="close_flag" style="display:none">
-            <%= check_img("{close_flag}") %>
-          </div>
-          <div id="permanent_close_flag" style="display:none">
-            <%= check_img("{permanent_close_flag}") %>
-          </div>
-        </div>
-        <%= datatable("incident_status",{:action=>"get_data",:format=>"json"},
-                  [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
-                   {:key=>"phase_name",:label=>t(:label_icm_incident_status_phase_code),:searchable=>true},
-                   {:key=>"incident_status_code",:label=>t(:label_icm_incident_status_incident_status_code),:searchable=>true},
-                   {:key=>"name",:label=>t(:label_icm_incident_status_name),:searchable=>true},
-                   {:key=>"display_sequence",:label=>t(:display_sequence)},
-                   {:key=>"default_flag",:label=>t(:default_flag),:formatter=>"Y.irm.template", :width => "40px"},
-                   {:key=>"close_flag",:label=>t(:label_icm_incident_close_flag),:formatter=>"Y.irm.template", :width => "80px"},
-                   {:key=>"permanent_close_flag",:label=>t(:label_icm_incident_permanent_close_flag),:formatter=>"Y.irm.template", :width => "80px"},
-                   {:key=>"status_meaning",:label=>t(:status),:width=>"70px"}],
-                   {:paginator_box=>"statusPaginator",:search_box=>"incidentStatusesSearchBox"})%>
-        <div id="statusPaginator"></div>
-      </div>
+
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_icm_incident_status_list) %></h2>
+      </td>
+      <td class="page-block-button">
+        <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
+      </td>
+      <td class="page-block-helper">
+        <div id="incidentStatusesSearchBox"></div>
+      </td>
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <div id="incident_status">
+      <%= datatable("incident_status",{:action=>"get_data",:format=>"json"},[],{:paginator_box=>"statusPaginator",:search_box=>"incidentStatusesSearchBox"})%>
     </div>
+    <div id="statusPaginator"></div>
+  </div>
 </div>
