--- a/app/views/icm/incident_statuses/show.html.erb
+++ b/app/views/icm/incident_statuses/show.html.erb
@@ -1,50 +1,46 @@
 <%= common_title(:show_data=>@incident_status[:name]) %>
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_icm_incident_status_show) %>&nbsp;<%= t(:label_detail_info) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:edit), {:action => "edit", :id => @incident_status},:class=>"btn btn-primary"%>
+      <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
+      <%= link_to t(:back), {:action => "index"},:class=>"btn" %>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <table class="show-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_icm_incident_status_show) %>&nbsp;<%= t(:label_detail_info) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @incident_status}%></div>
-            <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
-            <div class="button"><%= link_to t(:back), {:action => "index"}%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_icm_incident_status_phase_code)%></label></td>
+            <td class="data-col"><%=@incident_status[:phase_name]%></td>
+            <td class="label-col"><label><%=(t :label_icm_incident_status_incident_status_code)%></label></td>
+            <td class="data-col"><%= @incident_status.incident_status_code%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_icm_incident_status_name)%></label></td>
+            <td class="data-col"><%= @incident_status[:name]%></td>
+            <td class="label-col"><label><%=t(:display_sequence)%></label></td>
+            <td class="data-col"><%= @incident_status.display_sequence%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_icm_incident_status_description)%></label></td>
+            <td class="data-col"><%= @incident_status[:description]%></td>
+            <td class="label-col"><label><%=(t :default_flag)%></label></td>
+            <td class="data-col"><%= check_img(@incident_status.default_flag)%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :status)%></label></td>
+            <td class="data-col"><%= @incident_status[:status_meaning]%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_icm_incident_status_phase_code)%></label></td>
-              <td class="dataCol"><%=@incident_status[:phase_name]%></td>
-              <td class="labelCol"><label><%=(t :label_icm_incident_status_incident_status_code)%></label></td>
-              <td class="dataCol"><%= @incident_status.incident_status_code%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_icm_incident_status_name)%></label></td>
-              <td class="dataCol"><%= @incident_status[:name]%></td>
-              <td class="labelCol"><%=t(:display_sequence)%></td>
-              <td class="dataCol"><%= @incident_status.display_sequence%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_icm_incident_status_description)%></label></td>
-              <td class="dataCol"><%= @incident_status[:description]%></td>
-              <td class="labelCol"><label><%=(t :default_flag)%></label></td>
-              <td class="dataCol"><%= check_img(@incident_status.default_flag)%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :status)%></label></td>
-              <td class="dataCol"><%= @incident_status[:status_meaning]%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
   </div>
 </div>
 
