--- a/app/views/icm/mail_requests/index.html.erb
+++ b/app/views/icm/mail_requests/index.html.erb
@@ -1,50 +1,24 @@
 <%= common_title%>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_icm_mail_request) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="urgenceCodesSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="mail_requests_list" class="datatable" style="width:100%;">
-          <div id="id" style="display:none">
-            var op = '';
-            if('{status_code}' == 'ENABLED'){
-                op = '<%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>&nbsp;|&nbsp;<%= link_to(t(:disable),{:action=>"disable", :id => "{id}"})%>';
-            }
-            else
-            {
-                op = '<%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>&nbsp;|&nbsp;<%= link_to(t(:enable),{:action=>"enable", :id => "{id}"})%>';
-            }
-          </div>
-          <div id="status_code" style="display:none">
-            <%= check_img("{status_code}") %>
-          </div>
-        </div>
-        <%= datatable("mail_requests_list",{:action=>"get_data",:format=>"json"},
-                  [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.stemplate",:width=>"80px"},
-                   {:key=>"username",:label=>t(:label_irm_common_username),:searchable=>true, :width => "140px"},
-                   {:key=>"external_system_name",:label=>t(:label_irm_external_system),:searchable=>true, :width => "100px"},
-                   {:key=>"incident_category_name",:label=>t(:label_icm_incident_category), :width => "100px"},
-                   {:key=>"incident_sub_category_name",:label=>t(:label_icm_incident_sub_category), :width => "100px"},
-                   {:key=>"support_group_name",:label=>t(:label_icm_support_group), :width => "100px"},
-                   {:key=>"supporter_name",:label=>t(:label_icm_incident_request_support_person), :width => "80px"},
-                   {:key=>"impact_range_name",:label=>t(:label_icm_impact_range), :width => "60px"},
-                   {:key=>"urgency_name",:label=>t(:label_icm_urgence_code), :width => "75px"},
-                   {:key=>"status_code",:formatter=>"Y.irm.template",:label=>t(:status),:width=>"50px"}],
-                   {:paginator_box=>"mailRequestPaginator",:search_box=>"mailRequestSearchBox"})%>
-        <div id="mailRequestPaginator"></div>
-      </div>
+
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_icm_mail_request) %></h2>
+      </td>
+      <td class="page-block-button">
+        <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
+      </td>
+      <td class="page-block-helper">
+        <div id="mailRequestSearchBox"></div>
+      </td>
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <div id="mail_requests_list">
+      <%= datatable("mail_requests_list",{:action=>"get_data",:format=>"json"},[],{:paginator_box=>"mailRequestPaginator",:search_box=>"mailRequestSearchBox"})%>
     </div>
+    <div id="mailRequestPaginator"></div>
+  </div>
 </div>
