--- a/app/views/chm/change_statuses/index.html.erb
+++ b/app/views/chm/change_statuses/index.html.erb
@@ -1,41 +1,26 @@
 <%= page_title %>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_chm_change_status_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="statusesSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="statuses" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>|<%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
-          </div>
-          <div id="default_flag" style="display:none">
-            <%= check_img("{default_flag}") %>
-          </div>
-        </div>
-        <%= datatable("statuses",{:action=>"get_data",:format=>"json"},
-                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"70px"},
-                       {:key=>"code",:label=>t(:code),:searchable=>true,:width=>"150px"},
-                       {:key=>"name",:label=>t(:name),:searchable=>true,:width=>"150px"},
-                       {:key=>"description",:label=>t(:description),:searchable=>true},
-                       {:key=>"display_sequence",:label=>t(:display_sequence),:formatter=>"Y.irm.template",:width=>"70px"},
-                       {:key=>"default_flag",:label=>t(:default_flag),:formatter=>"Y.irm.template",:width=>"70px"}
-                       ],{:paginator_box=>"statusesPaginatorBox",:search_box=>"statusesSearchBox"})%>
-        <div id="statusesPaginatorBox"></div>
-      </div>
+
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_chm_change_status_list) %></h2>
+      </td>
+      <td class="page-block-button">
+        <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
+      </td>
+      <td class="page-block-helper">
+        <div id="statusesSearchBox"></div>
+      </td>
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <div id="statuses">
+      <%= datatable("statuses",{:action=>"get_data",:format=>"json"},[],{:paginator_box=>"statusesPaginatorBox",:search_box=>"statusesSearchBox"})%>
     </div>
+    <div id="statusesPaginatorBox"></div>
+  </div>
 </div>
 
 
