--- a/app/views/icm/support_groups/_new_form.html.erb
+++ b/app/views/icm/support_groups/_new_form.html.erb
@@ -4,22 +4,22 @@
     <table class="form-table">
       <tbody>
           <tr>
-            <td class="labelCol"><label><%=(t :label_icm_support_group_code)%></label></td>
-            <td class="dataCol"><%=@group.code%></td>
-            <td class="labelCol"><label><%=(t :label_icm_support_group_oncall_flag)%></label></td>
-            <td class="dataCol"><%=f.check_box :oncall_flag%></td>
+            <td class="label-col"><label><%=(t :label_icm_support_group_code)%></label></td>
+            <td class="data-col"><%=@group.code%></td>
+            <td class="label-col"><label><%=(t :label_icm_support_group_oncall_flag)%></label></td>
+            <td class="data-col"><%=f.check_box :oncall_flag%></td>
           </tr>
           <tr>
-            <td class="labelCol"><label><%=(t :label_icm_support_group_name)%></label></td>
-            <td class="dataCol"><%=@group[:name]%></td>
-            <td class="labelCol"><label><%=(t :label_icm_support_group_vendor_flag)%></label></td>
-            <td class="dataCol"><%=f.check_box :vendor_flag%></td>
+            <td class="label-col"><label><%=(t :label_icm_support_group_name)%></label></td>
+            <td class="data-col"><%=@group[:name]%></td>
+            <td class="label-col"><label><%=(t :label_icm_support_group_vendor_flag)%></label></td>
+            <td class="data-col"><%=f.check_box :vendor_flag%></td>
           </tr>
           <tr>
-            <td class="labelCol"><label><%=t(:label_icm_support_group_assignment_process_code)%></label></td>
-            <td class="dataCol"><%=f.select :assignment_process_code,available_processes,{},{:required=>true}%></td>
-            <td class="labelCol"></td>
-            <td class="dataCol"></td>
+            <td class="label-col"><label><%=t(:label_icm_support_group_assignment_process_code)%></label></td>
+            <td class="data-col"><%=f.select :assignment_process_code,available_processes,{},{:required=>true}%></td>
+            <td class="label-col"></td>
+            <td class="data-col"></td>
           </tr>
       </tbody>
     </table>
@@ -28,14 +28,14 @@
     <table class="form-table">
       <tbody>
           <tr>
-            <td class="labelCol empty">&nbsp;</td>
-            <td class="dataCol empty">&nbsp;</td>
-            <td class="labelCol empty">&nbsp;</td>
-            <td class="dataCol empty">&nbsp;</td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
           </tr>
           <tr>
-            <td class="labelCol"></td>
-            <td class="dataCol" style="width:82%">
+            <td class="label-col"></td>
+            <td class="data-col" style="width:82%">
               <%= render :partial => "irm/duel_select/tmpl",:locals => {:label=>"",:f=>f,:types=>support_group_duel_types,:sources=>support_group_duel_values,:str_value_field=>:assignment_str,:str_value=>@support_group.get_assignment_str,:size=>10} %>
             </td>
           </tr>
